fix: set correct background color behind hero image's lower grey part
The background color was more white, now it is var(--color-black-5)
which is #f2f2f2 which is almost the same as #f1f1f1 which would be the
value from the hero image's lower part. Chose to use --color-black-5
because it was provided by HDS and was almost the same color.

refs KK-738

--- a/src/domain/home/hero/hero.module.scss
+++ b/src/domain/home/hero/hero.module.scss
@@ -12,7 +12,9 @@
   grid-template-columns: 1fr minmax(auto, $containerMaxWidth) 1fr;
   display: grid;
   @include respond-above(lg) {
-    background-image: url('../../../assets/images/Culture_kids_background@2x.png');
+    background-image:
+      linear-gradient(to bottom, var(--color-summer) 276px, var(--color-black-5) 0),
+      url('../../../assets/images/Culture_kids_background@2x.png');
     background-repeat: repeat-x;
     background-position: center bottom -2px;
     background-size: 100% 321px;
